Fixing header nav items on tablet.

--- a/src/containers/header/_header.scss
+++ b/src/containers/header/_header.scss
@@ -92,7 +92,7 @@
     margin-bottom: 80px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
     .toolbar_navigation-items {
         display: none;
     }
